--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,20 @@
+language: php
 
+notifications:
+  email:
+    on_success: never
+    on_failure: change
+
+php:
+  - 5.3
+  - 7.0
+  - 7.1
+  - hhvm
+
+env:
+  - WP_VERSION=latest WP_MULTISITE=0
+
+matrix:
+  include:
+    - php: 7.0
+      env: WP_VERSION=latest WP_MULTISITE=1
