--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,10 @@ matrix:
   include:
     - php: 7.0
       env: WP_VERSION=latest WP_MULTISITE=1
+     
+install: composer install
+
+before_script:
+  - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+
+script: vendor/bin/phpunit
