--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sayan/wp-last-modified-info",
-    "description": "Adds last modified date and time automatically on pages and posts very easily. It is possible to use shortcodes to display last modified info anywhere on a WordPress site running 4.6 and beyond.",
+    "description": "Adds last modified date and time automatically on pages and posts very easily. It is possible to use shortcodes to display last modified info anywhere on a WordPress site running 4.7 and beyond.",
     "type": "wordpress-plugin",
     "license": "GPL-3.0",
     "authors": [
@@ -23,5 +23,8 @@
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {"Wplmi\\": "./inc"}
+    },
+    "require": {
+        "deliciousbrains/wp-background-processing": "^1.0"
     }
 }
