--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,18 @@
 name: Deploy to WordPress.org
+
 on:
   release:
     types: [published]
+    
 jobs:
-  tag:
+  deploy:
     name: New release
     runs-on: ubuntu-latest
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      
     - name: WordPress Plugin Deploy
       id: deploy
       uses: 10up/action-wordpress-plugin-deploy@stable
@@ -17,6 +21,8 @@ jobs:
       env:
         SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
         SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+        SLUG: wp-last-modified-info
+        
     - name: Upload release asset
       uses: actions/upload-release-asset@v1
       env:
