--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.8.0",
 	"description": "Adds last modified date and time automatically on pages and posts very easily.",
 	"scripts": {
-		"build": "npm-run-all -p build:be build:blocks",
+		"build": "npm run build:be && npm run build:blocks",
 		"start": "npm-run-all -p start:be start:blocks",
 		"build:be": "wp-scripts build --webpack-src-dir=assets/block-editor/src/ --output-path=assets/block-editor/build/",
 		"build:blocks": "wp-scripts build --webpack-src-dir=blocks/src/ --output-path=blocks/build/",
