--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
             "wp i18n make-pot . languages/wp-last-modified-info.pot --exclude=\"/vendor,/assets,/blocks\""
         ]
 	},
-    "optimize-autoloader": true,
+    "config": {
+        "optimize-autoloader": true
+    },
     "require": {
         "deliciousbrains/wp-background-processing": "^1.0"
     }
