--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
         {
             "name": "Sayan Datta",
             "email": "iamsayan@protonmail.com",
-            "homepage": "https://sayandatta.in",
+            "homepage": "https://www.sayandatta.co.in",
             "role": "Developer"
         }
     ],
     "support": {
-        "email": "hello@sayandatta.in"
+        "email": "iamsayan@protonmail.com"
     },
     "funding": [
         {
