--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
 	"author": "Sayan Datta",
 	"license": "ISC",
 	"devDependencies": {
-		"@wordpress/scripts": "^27.1.0",
+		"@wordpress/scripts": "^27.9.0",
 		"npm-run-all": "^4.1.5"
+	},
+	"dependencies": {
+		"@wordpress/icons": "^10.22.0",
+		"date-fns": "^4.1.0"
 	}
 }
