ci(deploy): update checkout action and install Subversion
Update the GitHub Actions workflow to use actions/checkout@v4 for improved reliability and add a step to install Subversion, which is required for the deployment process.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,11 @@ jobs:
     environment: wp.org plugin
     
     steps:
+    - name: Install Subversion
+      run: sudo apt-get install subversion
+
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Build Block Assets
       run: |
